# scorehsm

./: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  deny.toml  rust-toolchain.toml
.cargo/: config.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: ci.yml
.reuse/: dep5
LICENSES/: Apache-2.0.txt
docs/: reading-list.html
docs/architecture/: architecture.md
docs/plans/: plan-hsm-full.md  plan-score-contribution.md  plan-scorehsm-hardware-bringup.md
docs/requirements/: requirements.md
docs/safety/: coding-guidelines.md  fmea.md  gap-analysis.md  safety-case.md  safety-goals.md  safety-plan.md  threat-model.md  timing-evidence.md  tool-qualification-records.md  verification-report.md
docs/test-strategy/: test-strategy.md
firmware/: Cargo.toml  build.rs  memory-tz.x  memory.x  rust-toolchain.toml
firmware/.cargo/: config.toml
firmware/src/: crypto.rs  keystore.rs  main.rs  protocol.rs  trustzone.rs
hil/: Cargo.toml
hil/src/: main.rs
host/: Cargo.toml
host/benches/: timing.rs
host/src/: cert.rs  error.rs  feature_activation.rs  ids.rs  lib.rs  onboard_comm.rs  pqc.rs  safety.rs  session.rs  transport.rs  types.rs  update.rs
host/src/backend/: hw.rs  mock.rs  mod.rs  sw.rs
host/tests/: cert_tests.rs  constant_time_tests.rs  feature_activation_tests.rs  integration_identity.rs  integration_nonce.rs  integration_post.rs  integration_rate_limit.rs  integration_safe_state.rs  integration_session.rs  integration_transport.rs  onboard_comm_tests.rs  pqc_tests.rs  qualification_tests.rs  session_tests.rs  sw_backend_tests.rs  update_tests.rs
