[workspace]
members = [
    "host",
    "hil",
    # firmware is a separate embedded crate with its own toolchain — not in workspace
]
exclude = ["firmware"]
resolver = "2"

[workspace.package]
edition    = "2021"
license    = "Apache-2.0"
repository = "https://github.com/nhuvaoanh123/scorehsm"
authors    = ["Taktflow Systems"]
