[package]
name    = "scorehsm-firmware"
version = "0.1.0"
edition = "2021"
description = "HSM firmware for STM32L552 Nucleo — Embassy async, TrustZone, USB CDC"
license = "Apache-2.0"

# Embassy: use git refs — STM32 HAL not yet stable on crates.io for l552
[dependencies]
embassy-executor  = { git = "https://github.com/embassy-rs/embassy", features = [
    "arch-cortex-m",
    "executor-thread",
    "integrated-timers",
] }
embassy-stm32     = { git = "https://github.com/embassy-rs/embassy", features = [
    "stm32l552ze",
    "time-driver-any",
    "memory-x",
    "unstable-pac",
    "exti",
] }
embassy-time      = { git = "https://github.com/embassy-rs/embassy", features = [
    "tick-hz-32_768",
] }
embassy-sync      = { git = "https://github.com/embassy-rs/embassy" }
embassy-usb       = { git = "https://github.com/embassy-rs/embassy" }
embassy-futures   = { git = "https://github.com/embassy-rs/embassy" }

# Cortex-M runtime
cortex-m      = { version = "0.7", features = ["critical-section-single-core", "cm33"] }
cortex-m-rt   = "0.7"

# Debug / logging
defmt      = "0.3"
defmt-rtt  = "0.4"
panic-probe = { version = "0.3", features = ["print-defmt"] }

# Crypto — no_std builds; force-soft-compact avoids any x86 SHA-NI path
sha2           = { version = "0.10", default-features = false, features = ["force-soft-compact"] }
aes-gcm        = { version = "0.10", default-features = false, features = ["aes"] }
hmac           = { version = "0.12", default-features = false }
hkdf           = { version = "0.12", default-features = false }
p256           = { version = "0.13", default-features = false, features = ["ecdsa", "ecdh"] }
chacha20poly1305 = { version = "0.10", default-features = false }
rand_core      = { version = "0.6", default-features = false }
zeroize        = { version = "1", default-features = false, features = ["derive"] }
heapless       = "0.8"

[profile.release]
codegen-units = 1
debug         = 2       # keep symbols for probe-rs
lto           = "fat"
opt-level     = "s"     # size-optimised: 512 KB flash budget
overflow-checks = true  # keep in release — HSM must not wrap silently

[profile.dev]
codegen-units = 1
debug         = 2
opt-level     = 1
overflow-checks = true
