[package]
name = "scorehsm-host"
version = "0.1.0"
edition = "2021"
description = "HSM host library — hardware (USB/L55) and software (rustcrypto) backends"
license = "Apache-2.0"

[dependencies]
# Software fallback backend
aes-gcm       = "0.10"
sha2          = "0.10"
hmac          = "0.12"
hkdf          = "0.12"
p256          = { version = "0.13", features = ["ecdsa", "ecdh"] }

# USB CDC hardware backend
serialport    = "4"

# Error handling
thiserror     = "1"

# Post-quantum (software only)
ml-kem        = { version = "0.1", optional = true }

# Async (optional, for TLS integration)
tokio         = { version = "1", features = ["full"], optional = true }

[features]
default   = ["sw-backend"]
sw-backend  = []
hw-backend  = []
pqc         = ["ml-kem"]
tls         = ["tokio"]

[dev-dependencies]
hex = "0.4"
