[package]
name = "scorehsm-host"
version = "0.1.0"
edition = "2021"
description = "HSM host library — hardware (USB/L55) and software (rustcrypto) backends"
license = "Apache-2.0"

[dependencies]
# Software fallback backend
aes-gcm        = "0.10"
sha2           = { version = "0.10", features = ["force-soft-compact", "compress"] }  # force-soft-compact: sha-ni broken on win-gnu; compact is scalar (no SIMD emulation)
hmac           = "0.12"
hkdf           = "0.12"
p256           = { version = "0.13", features = ["ecdsa", "ecdh"] }
chacha20poly1305 = "0.10"
sha3           = "0.10"
rand_core      = { version = "0.6", features = ["getrandom"] }
rand_chacha    = "0.3"
zeroize        = { version = "1", features = ["derive"] }
subtle         = "2"

# USB CDC hardware backend
serialport     = "4"

# Error handling
thiserror      = "1"

# Certificate management
x509-cert      = { version = "0.2", optional = true }

# Post-quantum (software only)
pqcrypto-dilithium = { version = "0.5", optional = true }
pqcrypto-kyber     = { version = "0.8", optional = true }
pqcrypto-traits    = { version = "0.3", optional = true }

[features]
default      = ["sw-backend"]
sw-backend   = []
hw-backend   = []
mock         = []
pqc          = ["pqcrypto-dilithium", "pqcrypto-kyber", "pqcrypto-traits"]
certs        = ["x509-cert"]

[dev-dependencies]
hex       = "0.4"
proptest  = "1"
digest    = { version = "0.10", features = ["core-api"] }
criterion = { version = "0.5", features = ["html_reports"] }
# Re-exported for integration test signing helpers
p256      = { version = "0.13", features = ["ecdsa", "ecdh", "pkcs8"] }
sha2      = { version = "0.10" }
# Certificate test generation
rcgen     = { version = "0.13", features = ["pem"] }

[[bench]]
name = "timing"
harness = false

[[test]]
name = "cert_tests"
required-features = ["certs"]

[[test]]
name = "pqc_tests"
required-features = ["pqc"]

[[test]]
name = "qualification_tests"
required-features = ["mock"]
